load("@rules_multirun//:defs.bzl", "command", "multirun")

IMAGES = {
    "container-client-test": "//images/container-client-test:load",
}

[
    command(
        name = name,
        command = target,
        tags = ["requires-container-engine"],
    )
    for (name, target) in IMAGES.items()
]

multirun(
    name = "load_all",
    commands = IMAGES.keys(),
    tags = [
        "no-remote",
        "requires-container-engine",
    ],
)
