load("@rules_multirun//:defs.bzl", "command", "multirun")

IMAGES = {
    "container-client-test": "//images/container-client-test:load",
    "proxy-everything": "//images/container-client-test:load-proxy-everything",
}

[
    command(
        name = name,
        command = target,
        target_compatible_with = [
            "@platforms//os:linux",
        ],
    )
    for (name, target) in IMAGES.items()
]

multirun(
    name = "load_all",
    commands = IMAGES.keys(),
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)
